--- a/client/src/Style/NavBar.css
+++ b/client/src/Style/NavBar.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Pacifico&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Lobster&display=swap');
 :root {
     --whitePink: #FCF9F9;
     --watermelon: #F95D71;
@@ -9,10 +11,20 @@
 
 .navbar-container {
     background-image: linear-gradient(to right, rgba(58, 39, 85, 0.4), rgba(58, 39, 85, 0.2), rgba(255, 185, 185), rgb(255, 185, 185));
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.2), 0 2px 4px rgba(0, 0, 0, 0.1);
 }
+
+.me-auto :hover {
+    color: var(--watermelon);
+}
+
 
 .logo-image {
     width: 55px; /* Set the desired width */
     height: auto; /* Set the desired height */
     margin-right: 5px; /* Add spacing between the logo image and the text */
+}
+
+.logo-name {
+    font-family: 'pacifico',cursive;
 }
