Adjusted Slider Images position

--- a/client/src/Style/ImageSlider.css
+++ b/client/src/Style/ImageSlider.css
@@ -15,8 +15,8 @@
   }
   
   .mainimg {
-    width: 300px; /* Adjust the width as per your preference */
-    height: 300px; /* Adjust the height to match the width */
+    width: 90%; /* Adjust the width as per your preference */
+    height: auto; /* Adjust the height to match the width */
     object-fit: cover;
   }
   
