--- a/client/src/Style/Home.css
+++ b/client/src/Style/Home.css
@@ -52,22 +52,12 @@ font-size: 5rem;
 }
 
 .order-now {
-font-family: 'Pacifico', cursive;
-font-size: 24px;
-background-color: var(--watermelon);
-color: var(--whitePink);
-border: none;
-padding: 10px 20px;
-margin-top: 3rem;
-cursor: pointer;
-/* text-transform: uppercase; */
-background-color: #422824;
-color: white;
+
 }
 
 .order-now:hover{
-    color: rgb(63, 10, 63);
-    background-color: white;
+    /* color: rgb(63, 10, 63);
+    background-color: white; */
     box-shadow: 0 0 5px rgb(63, 10, 63),
      0 0 25px rgb(63, 10, 63),
      0 0 50px rgb(63, 10, 63),
