--- a/client/src/Style/Home.css
+++ b/client/src/Style/Home.css
@@ -52,12 +52,16 @@ font-size: 5rem;
 }
 
 .order-now {
-
+  background-color: var(--watermelon);
+  color: white;
+  font-family: 'Lobster', cursive;
+  margin-top: 2rem;
+  border-radius: 2rem;
 }
 
 .order-now:hover{
-    /* color: rgb(63, 10, 63);
-    background-color: white; */
+    color: rgb(63, 10, 63);
+    background-color: white;
     box-shadow: 0 0 5px rgb(63, 10, 63),
      0 0 25px rgb(63, 10, 63),
      0 0 50px rgb(63, 10, 63),
@@ -66,3 +70,32 @@ font-size: 5rem;
   }
 
 
+.sprinkle {
+  position: absolute;
+  z-index: -1;
+  visibility: hidden;
+  pointer-events: none; /* Ignore mouse events on sprinkles */
+  animation: sprinkleAnimation linear infinite;
+  animation-duration: 5ms;
+}
+
+@keyframes sprinkleAnimation {
+  0% {
+    visibility: visible;
+    transform: translateY(-100vh);
+    pointer-events: none;
+  }
+  100% {
+    transform: translateY(100vh);
+    pointer-events: none;
+  }
+}
+
+.background {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  pointer-events: none;
+}
