--- a/client/src/Style/ImageSlider.css
+++ b/client/src/Style/ImageSlider.css
@@ -24,7 +24,7 @@
   .sliders-button {
     font-family: 'Pacifico', cursive;
     font-size: 18px;
-    background-color: transparent;
+    background-color: white;
     color: var(--brown);
     border: white solid;
     padding: 10px 20px;
