edit about us page (not done yet)

--- a/client/src/Style/AboutUs.css
+++ b/client/src/Style/AboutUs.css
@@ -1,8 +1,14 @@
 @import url('https://fonts.googleapis.com/css2?family=Anton&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Damion&display=swap');
 
+
+.about-container {
+    background-image: url(../assets/pxfuel.jpg);
+    background-size: 100% 100%;
+}
+
 .upper-half {
-    /* background-image: url(../assets/golddots.png); */
+    padding: 2rem;
     margin: 3rem;
     align-items: center;
 }
@@ -20,11 +26,11 @@
 }
 
 .lower-half {
-    background-image: url(../assets/2766.jpeg);
+    padding: 2rem;
 }
 
 .madeforu {
-    color: #F4ACAC;
+    color: white;
     font-family: 'Anton', sans-serif;
 }
 
@@ -57,15 +63,17 @@ h1 {
 
 }
 p {
-    background-color: white;
+    font-family: 'Anton', sans-serif;
     font-size: 1.2rem;
-    font-weight: 600;
+    background-color: #ffffff4b;
+    padding: 3rem;
 }  
 
 .about-us-title {
     background-color: white;
 }
-.neonText {
+
+/* .neonText {
     font-size: 4rem;
     color: #fff;
     text-shadow: 0 0 10px rgba(255, 255, 0, 0.8);
@@ -84,7 +92,7 @@ p {
       text-shadow: 0 0 20px rgba(255, 255, 0, 0.8);
       
     }
-  }
+  } */
   
 /* .neonText {
     color: #494444;
