updated login and signup

--- a/client/src/Style/Signup.css
+++ b/client/src/Style/Signup.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Righteous&display=swap');
 .App {
     text-align: center;
     display: flex;
@@ -8,19 +9,23 @@
 
 }
 
+.Signup{
+    color: black;
+}
+
 .Form-container,.Signup-form {
     display: flex;
     flex-direction: column;
     align-items: center;
     width: 100%;
     max-width: 350px;
-    background: rgba(238,175,223,0.8);
+    background: rgba(252, 208, 208, 0.8);
 }
 
 .Form-container {
     padding: 0.5rem;
     margin: 1rem ;
-    border: 2px solid white;
+    border: 2px solid  rgb(247, 191, 198);
     border-radius: 10px;
 }
 
@@ -39,15 +44,15 @@ input {
 
 button {
     border: none;
-    background-color: white;
+    background-color: rgb(10, 10, 10);
     padding: 20px;
     border-radius: 10px;
     cursor: pointer;
-    color:#F69CF2 ;
+    color:#ffffff ;
 }
 
 .link-btn {
     background: none;
-    color: white;
+    color: rgb(7, 7, 7);
     text-decoration: underline;
 }
