--- a/client/src/Style/Login.css
+++ b/client/src/Style/Login.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Righteous&display=swap');
 .App {
     text-align: center;
     display: flex;
@@ -5,19 +6,25 @@
     align-items: center;
     justify-content: center;
     color: white;
-    background-image: linear-gradient(80deg, #FA99B4,#F69CF2,#F6AE9C);
+    background-image: url("C:\Users\Natalie\Donuts-Shop-Advanced-Web\client\src\assets\Donutspic.jpg");
+    background-size: cover;
+    background-position: center;
+    font-family: 'Righteous', cursive;
 }
-
+.Login{
+    color: black;
+ }
 .Form-container, .Login-form {
     display: flex;
     flex-direction: column;
     align-items: center;
     padding: 5rem;
-    border: 2px solid white;
-    border-radius: 10px;
+    border: 2px solid rgb(247, 191, 198);
+    border-radius: 15px;
+    box-shadow:0px 0px 20px rgba(0, 0, 0, 0.1); ;
     width: 100%;
     max-width: 350px;
-    background: rgba(238,175,223,0.8);
+    background: rgba(252, 208, 208, 0.8);
 }
 
 .Form-container{
@@ -28,6 +35,7 @@
 label {
     text-align: left;
     padding: 0.25rem 0;
+    color: rgb(4, 4, 4);
 }
 
 input {
@@ -39,16 +47,17 @@ input {
 
 button {
     border: none;
-    background-color: white;
+    background-color: rgb(25, 24, 24);
     padding: 20px;
     margin: 1rem;
     border-radius: 10px;
     cursor: pointer;
-    color:#F69CF2 ;
+    color: rgb(255, 255, 255);
+    
 }
 
 .link-btn {
     background: none;
-    color: white;
+    color: rgb(14, 13, 13);
     text-decoration: underline;
 }
