--- a/client/src/Style/Home.css
+++ b/client/src/Style/Home.css
@@ -18,7 +18,10 @@
 
 .app__header__wrapper_info_text {
   color: var(--brown);
-  
+  margin-top: 1.5rem;
+  /* background-color: rgba(255, 255, 255, 0.208);
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.2), 0 2px 4px rgba(0, 0, 0, 0.1); */
+  border-radius: 3rem; 
   padding: 20px;
 }
 
@@ -26,6 +29,32 @@ body {
     background-image: linear-gradient(to right, rgba(58, 39, 85, 0.4), rgba(58, 39, 85, 0.2), rgba(255, 185, 185), rgb(255, 185, 185));
 
 }
+
+.swiper-container-wrapper {
+  margin-top: 2rem;
+}
+
+.swiper-container {
+  width: 100%;
+  height: auto;
+}
+
+.swiper-slide.slider-image {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.swiper-slide.slider-image img {
+  max-width: 100%;
+  max-height: 100%;
+}
+
+.swiper-button-next,
+.swiper-button-prev {
+  color: pink; 
+}
+
 
 
 /* .text-row {
