--- a/client/src/Style/AboutUs.css
+++ b/client/src/Style/AboutUs.css
@@ -130,7 +130,7 @@ h1 {
   text-align: center;
 }
 
-p {
+.aboutus-p {
   font-size: 1.5rem;
   font-weight: 650;
   background-color: rgba(255, 255, 255, 0.3);
