--- a/client/src/Style/AboutUs.css
+++ b/client/src/Style/AboutUs.css
@@ -7,6 +7,9 @@ body {
   padding: 0;
   font-family: 'Anton', sans-serif;
   color: white;
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
 }
 
 .about-container {
