Add users to DB.

--- a/client/src/Style/Footer.css
+++ b/client/src/Style/Footer.css
@@ -1,5 +1,5 @@
 .footer {
-    min-height: 100vh;
+    /* min-height: 100vh; */
     display: flex;
     flex-direction: column;
     margin-top: auto;
