--- a/client/src/Style/Footer.css
+++ b/client/src/Style/Footer.css
@@ -1,7 +1,15 @@
-.footer {
+/* .footer {
     /* min-height: 100vh; */
     display: flex;
     flex-direction: column;
     margin-top: auto;
-}
+} */
 
+.footer {
+    position: fixed;
+    bottom: calc(5vh + 20px); /* Adjust the values according to your needs */
+    width: 100%;
+    height: 60px;
+    background-color: #f0f0f0;
+  }
+  
