--- a/client/src/Style/AboutUs.css
+++ b/client/src/Style/AboutUs.css
@@ -65,6 +65,14 @@ body {
     font-size: 3.5rem;
 }
 
+.about-us h1 {
+  font-size: 2.5rem;
+  font-weight: bold;
+  text-align: center;
+  margin-top: 200px;
+  
+}
+
 .side-img {
   width: 100%;
   height: auto;
@@ -127,11 +135,6 @@ body {
   height: 25rem;
 }
 
-h1 {
-  font-size: 2.5rem;
-  font-weight: bold;
-  text-align: center;
-}
 
 .aboutus-p {
   font-size: 1.5rem;
