--- a/client/src/Style/Admin.module.css
+++ b/client/src/Style/Admin.module.css
@@ -5,20 +5,41 @@
   }
   
   .productsContainer {
+    margin-top: 450px;
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     gap: 20px;
+    
+    position: relative;
+    top: -20em;
   }
   
   .productItem {
     border: 1px solid #ccc;
     padding: 10px;
   }
-  
+
+  .addproductbutton2{
+    color: white;
+    background-color: rgb(63, 10, 63);
+  }
+  .addproductbutton2:hover{
+    color: rgb(63, 10, 63);
+    background-color: white;
+    box-shadow: 0 0 5px rgb(63, 10, 63),
+     0 0 25px rgb(63, 10, 63),
+     0 0 50px rgb(63, 10, 63),
+     0 0 100px rgb(63, 10, 63),
+     0 0 200px rgb(63, 10, 63);
+  }
   .productImage {
     width: 100%;
     height: 200px;
     object-fit: cover;
+  }
+  .admaindonutpage{
+    margin-top: 300px;
+    margin-bottom: 200px;
   }
 
 .iconsContainer {
